* config.gcc: Add powerpc-*-eabisimaltivec*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48084 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config.gcc: Add powerpc-*-eabisimaltivec*.
+
 2001-12-16  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-common.c, c-common.h (back_end_hook): Remove.
