--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.h (FUNCTION_ARG_REGNO_P): Change 
+	ALTIVEC_ARG_MAX_REG to ALTIVEC_ARG_NUM_REG.
+
 2001-12-16  Zack Weinberg  <zack@codesourcery.com>
 
 	* c-typeck.c (error_init, pedwarn_init, warning_init): Call
