* builtins.c (apply_args_size): Change regno to unsigned.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48090 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
 
+      * builtins.c (apply_args_size): Change regno to unsigned.
+
+2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
+
         * config/rs6000/rs6000.h (FUNCTION_ARG_REGNO_P): Change 
 	ALTIVEC_ARG_MAX_REG to ALTIVEC_ARG_NUM_REG.
 
