--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
 
+      * config/rs6000/rs6000.c (rs6000_legitimize_address): Force both
+      PLUS operands into registers for altivec mode.
+
+2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
+
       * builtins.c (apply_args_size): Change regno to unsigned.
 
 2001-12-16  Aldy Hernandez  <aldyh@redhat.com>
