* doc/c-tree.texi (Trees): Only refer to GCC.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48099 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/c-tree.texi (Trees): Only refer to GCC.
+
 2001-12-17  Andreas Jaeger  <aj@suse.de>
 
 	* c-common.def: Fix typo in comment.
