--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-17  Stan Shebs  <shebs@apple.com>
+
+	* config/rs6000/darwin.h (SUBTARGET_OVERRIDE_OPTIONS): Define.
+	(STACK_BOUNDARY): Remove definition.
+	(CPP_PREDEFINES): Define __POWERPC__.
+
 2001-12-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/c-tree.texi (Trees): Only refer to GCC.
