* update_web_docs_old: Copy from update_web_docs.  Add comment 	that this is for GCC 3.0.x and earlier versions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48112 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-17  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* update_web_docs_old: Copy from update_web_docs.  Add comment
+	that this is for GCC 3.0.x and earlier versions.
+
 2001-11-19  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc_release: Add /usr/local/bin to path when local.
