--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-17  Richard Henderson  <rth@redhat.com>
+
+	* cfgcleanup.c (outgoing_edges_match): Check for insn match with
+	a single outgoing edge too.
+
 Mon Dec 17 18:27:52 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfgrtl.c (redirect_edge_and_branch):  Do simplify abnormal
