* parse.y (link_nested_class_to_enclosing): Removed useless 	statement.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48118 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-17  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (link_nested_class_to_enclosing): Removed useless
+	statement.
+
 2001-12-16  Tom Tromey  <tromey@redhat.com>
 
 	* mangle.c (mangle_method_decl): Never emit `C2' constructor.
