--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-17  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* g77.texi, invoke.texi: Update links to GCC manual.
+
 Sun Dec 16 16:08:57 2001  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* news.texi: Fix spelling errors.
