--- a/gcc/f/g77.texi
+++ b/gcc/f/g77.texi
@@ -295,7 +295,8 @@ many people have helped create and improve GNU Fortran.
 @item
 The packaging and compiler portions of GNU Fortran are based largely
 on the GNU CC compiler.
-@xref{Contributors,,Contributors to GNU CC,gcc,Using and Porting GNU CC},
+@xref{Contributors,,Contributors to GCC,gcc,Using the GNU Compiler
+Collection (GCC)},
 for more information.
 
 @item
@@ -845,7 +846,8 @@ files and accepts Fortran-specific command-line options, plus some
 command-line options that are designed to cater to Fortran users
 but apply to other languages as well.
 
-@xref{G++ and GCC,,Compile C; C++; or Objective-C,gcc,Using and Porting GNU CC},
+@xref{G++ and GCC,,Compile C; C++; Objective-C; Ada; CHILL; Fortran;
+or Java,gcc,Using the GNU Compiler Collection (GCC)},
 for information on the way different languages are handled
 by the GNU CC compiler (@command{gcc}).
 
@@ -7816,7 +7818,8 @@ maths library, but we have no evidence of it causing trouble.)
 
 Some targets (such as the Alpha) may need special options for full IEEE
 conformance.
-@xref{Submodel Options,,Hardware Models and Configurations,gcc,Using and Porting GNU CC}.
+@xref{Submodel Options,,Hardware Models and Configurations,gcc,Using
+the GNU Compiler Collection (GCC)}.
 
 @node Inconsistent Calling Sequences
 @subsection Inconsistent Calling Sequences
@@ -8120,8 +8123,9 @@ compiler, typically @command{gcc}.)
 Using an appropriate @option{-m} option to generate specific code for your
 CPU may be worthwhile, though it may mean the executable won't run on
 other versions of the CPU that don't support the same instruction set.
-@xref{Submodel Options,,Hardware Models and Configurations,gcc,Using and
-Porting GNU CC}.  For instance on an x86 system the compiler might have
+@xref{Submodel Options,,Hardware Models and Configurations,gcc,Using the
+GNU Compiler Collection (GCC)}.  For instance on an x86 system the
+compiler might have
 been built---as shown by @samp{g77 -v}---for the target
 @samp{i386-pc-linux-gnu}, i.e.@: an @samp{i386} CPU@.  In that case to
 generate code best optimized for a Pentium you could use the option
@@ -8159,8 +8163,8 @@ directly from the @command{gcc} manual, with minor modifications
 to tailor it to users of @command{g77}.
 Anytime a bug seems to have more to do with the @command{gcc}
 portion of @command{g77}, see
-@ref{Trouble,,Known Causes of Trouble with GNU CC,
-gcc,Using and Porting GNU CC}.)
+@ref{Trouble,,Known Causes of Trouble with GCC,
+gcc,Using the GNU Compiler Collection (GCC)}.)
 
 @menu
 * But-bugs::         Bugs really in other programs or elsewhere.
@@ -12180,7 +12184,8 @@ preprocessing.
 Or, learn how to use @command{gcc}'s @option{-x} option to specify
 the language @samp{f77-cpp-input} for Fortran files that
 require preprocessing.
-@xref{Overall Options,,gcc,Using and Porting GNU CC}.
+@xref{Overall Options,,Options Controlling the Kind of
+Output,gcc,Using the GNU Compiler Collection (GCC)}.
 
 @item
 The source file is preprocessed, and the results of preprocessing
