* doc/install.texi2html: Use -I $SOURCEDIR.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48121 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* doc/install.texi2html: Use -I $SOURCEDIR.
+
 	Separate user and internals manuals.
 	* Makefile.in (info, $(docdir)/gcc.info, dvi, gcc.dvi): Update
 	dependencies.
